--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -41,56 +43,6 @@ nav ul {
 
 .content > section > :first-child {
 	margin-top: 0;
-}
-
-/* Typography */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin-bottom: 1rem;
-	font-weight: bold;
-	line-height: 1;
-}
-
-h1,
-h2 {
-	max-width: 40ch;
-}
-
-:is(h2, h3):not(:first-child) {
-	margin-top: 3rem;
-}
-
-:is(h4, h5, h6):not(:first-child) {
-	margin-top: 2rem;
-}
-
-h1 {
-	font-size: 3.25rem;
-	font-weight: 800;
-}
-
-h2 {
-	font-size: 2.5rem;
-}
-
-h3 {
-	font-size: 1.75rem;
-}
-
-h4 {
-	font-size: 1.3rem;
-}
-
-h5 {
-	font-size: 1rem;
-}
-
-p {
-	line-height: 1.65em;
 }
 
 .content ul {
