--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from '../../languages';
 import { SITE } from '../../consts';
-import AstroLogo from './AstroLogo.astro';
+import Logo from './Logo.astro';
 import SkipToContent from './SkipToContent.astro';
 import SidebarToggle from './SidebarToggle';
 import LanguageSelect from './LanguageSelect';
@@ -23,7 +23,7 @@ const lang = getLanguageFromURL(currentPage);
 		</div>
 		<div class="logo flex">
 			<a href="/">
-				<AstroLogo size={40} />
+				<Logo size={40} />
 				<h1>{SITE.title ?? 'Documentation'}</h1>
 			</a>
 		</div>
