--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -5,15 +5,20 @@ import TableOfContents from '../RightSidebar/TableOfContents';
 type Props = {
 	title: string;
 	headings: MarkdownHeading[];
+    description: string,
 	githubEditUrl: string;
 };
 
-const { title, headings, githubEditUrl } = Astro.props;
+const { title, headings, description, githubEditUrl } = Astro.props;
 ---
 
 <article id="article" class="content">
 	<section class="main-section">
-		<h1 class="text-5xl" id="overview">{title}</h1>
+        <div class="">
+            <h1 class="text-5xl font-bold" id="overview">{title}</h1>
+            <p class="text-xl font-thin py-4">{description}</p>
+            <hr/>
+        </div>
 		<nav class="block sm:hidden">
 			<TableOfContents client:media="(max-width: 50em)" headings={headings} />
 		</nav>
