--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -126,14 +126,14 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 		</style>
 	</head>
 
-	<body class="bg-primary-dark">
+	<body class="bg-primary-dark font-roboto text-base">
 		<Header currentPage={currentPage} />
 		<main class="layout">
 			<aside id="grid-left" class="grid-sidebar" title="Site Navigation">
 				<LeftSidebar currentPage={currentPage} />
 			</aside>
 			<div id="grid-main">
-				<PageContent title={data.title} headings={headings} githubEditUrl={githubEditUrl}>
+				<PageContent title={data.title} headings={headings} description={data.description} githubEditUrl={githubEditUrl}>
 					<slot />
 				</PageContent>
 			</div>
