updates before start styling

--- a/src/components/Canvas.astro
+++ b/src/components/Canvas.astro
@@ -1,4 +1,4 @@
-<div class="">
+<div class="flex flex-col border-[0.3px] border-dark-100 py-4">
     <canvas id="viewport" class="flex justify-center w-96"></canvas>
 </div>
 
