--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -126,7 +126,7 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
 		</style>
 	</head>
 
-	<body class="bg-primary-dark font-roboto text-base">
+	<body class="bg-primary-dark font-roboto text-base text-white">
 		<Header currentPage={currentPage} />
 		<main class="layout">
 			<aside id="grid-left" class="grid-sidebar" title="Site Navigation">
