--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -36,7 +36,7 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
         />
 	</head>
 
-	<body class="bg-primary-dark font-roboto text-base text-white">
+	<body class="bg-primary-dark font-roboto text-base text-white leading-relaxed">
 		<Header currentPage={currentPage} />
 		<main class="flex items-start justify-between">
 			<aside class="" title="Site Navigation">
