--- a/src/components/HTML/CodeBlock.astro
+++ b/src/components/HTML/CodeBlock.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<code {...props} class="bg-gray-600 language-javascript"><slot /></code>
+<code {...props} class=""><slot /></code>
