--- a/src/components/HTML/H2.astro
+++ b/src/components/HTML/H2.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<h2 {...props} class="text-3xl font-bold"><slot/></h2>
+<h2 {...props} class="text-3xl font-bold py-4"><slot/></h2>
