--- a/src/components/HTML/P.astro
+++ b/src/components/HTML/P.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<p {...props} class="text-justify"><slot/></p>
+<p {...props} class="text-justify pb-6"><slot/></p>
