--- a/src/components/HTML/A.astro
+++ b/src/components/HTML/A.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<a {...props} class="">
-  <slot />
+<a {...props} class="bg-blue-800 border-b-white">
+  <slot/>
 </a>
