custom macros for latex

--- a/src/components/Math.astro
+++ b/src/components/Math.astro
@@ -1,17 +1,24 @@
 ---
 import katex from 'katex';
+import {NOTATION} from '../consts';
+
 export interface Props {
     formula: string,
     description: string;
 }
+
 const { formula, description } = Astro.props;
-const html = katex.renderToString(formula);
+
+const html = katex.renderToString(formula, {
+    macros: NOTATION
+});
 ---
 
 <div data-latex={formula} id="math" class="math relative flex flex-col items-center border-[0.3px] border-dark-100 py-4">
     <p set:html={html}></p>
     <em class="pt-4">Equation X.X: {description}</em>
-    <button id="test-latex" class="absolute top-2 right-2">Copy LaTeX</button>
+    <!-- The button is disable because most of the latex are custom commands -->
+    <button id="test-latex" class="hidden absolute top-2 right-2">Copy LaTeX</button>
 </div>
 
 <script>
