--- a/src/components/Figure.astro
+++ b/src/components/Figure.astro
@@ -2,7 +2,7 @@
 const { src, description } = Astro.props;
 ---
 
-<div class="flex flex-col items-center border-[0.3px] border-dark-100 py-4">
+<div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
     <img src={src} alt={description}>
-    <em class="pt-4">Figure X.X: {description}</em>
+    <em class="py-4">Figure X.X: {description}</em>
 </div>
