--- a/src/components/Math.astro
+++ b/src/components/Math.astro
@@ -1,6 +1,12 @@
 ---
 import katex from 'katex';
 import {NOTATION} from '../consts';
+import {unified} from 'unified';
+import remarkParse from 'remark-parse';
+import remarkMath from 'remark-math';
+import remarkRehype from 'remark-rehype';
+import rehypeKatex from 'rehype-katex';
+import rehypeStringify from 'rehype-stringify';
 
 export interface Props {
     formula: string,
@@ -16,17 +22,26 @@ const html = katex.renderToString(formula, {
     macros: NOTATION
 });
 
+let caption = unified()
+    .use(remarkParse)
+    .use(remarkMath)
+    .use(remarkRehype)
+    .use(rehypeKatex, {
+        macros: NOTATION
+    })
+    .use(rehypeStringify)
+    .process(description)
+
 ---
 
 <div data-latex={formula} id="math" class="math relative flex flex-col items-center border-[0.3px] border-dark-100 my-4">
     <p set:html={html} class="pt-4"></p>
-    <p>Equation X.X: {description}</p>
+    <div set:html={caption} class="py-4"></div>
     <!-- The button is disable because most of the latex are custom commands -->
     <button id="test-latex" class="hidden absolute top-2 right-2">Copy LaTeX</button>
 </div>
 
 <script>
-// import katex from 'katex';
 const btn = document.querySelector("#test-latex");
 const math = document.querySelector("#math");
 
