--- a/src/components/Globals/Equation.astro
+++ b/src/components/Globals/Equation.astro
@@ -1,6 +1,6 @@
 ---
 import katex from 'katex';
-import {NOTATION} from '../consts';
+import {NOTATION} from '../../consts';
 import {unified} from 'unified';
 import remarkParse from 'remark-parse';
 import remarkMath from 'remark-math';
