--- a/src/components/LinearAlgebra/ScalarMult.astro
+++ b/src/components/LinearAlgebra/ScalarMult.astro
@@ -1,50 +1,135 @@
 ---
+// IMPORTANT: import the JSXGraph wrapper component
+import JSXGraph from "../Figures/JSXGraph.astro";
+
 const {description="Please insert the description of this figure"} = Astro.props;
 ---
-<div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
-    <canvas id="scalar-mult" class="flex justify-center w-96"></canvas>
-    <em class="py-4">Figure X.X: {description}</em>
-</div>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css" integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js" integrity="sha384-PwRUT/YqbnEjkZO0zZxNqcxACrXe+j766U2amXcgMg5457rve2Y7I6ZJSm2A0mS4" crossorigin="anonymous"></script>
+
+<JSXGraph description={description}>
+    <div id="box1" class="jsxbox" style="width: 100%; height: 480px;">
+    </div>
+</JSXGraph>
 
 <script>
-// import tello from '../3d/hero.js'
+// IMPORTANT: import JSXGraph
+import { NOTATION } from '../../consts.js';
+import JXG from '../../tools/jsxgraph.init.js'
+// import katex from 'katex';
+// import { NOTATION } from '../../consts.js';
 
-import * as THREE from 'three';
+let board = JXG.JSXGraph.initBoard('box1', {
+    boundingbox:[-5,10,5,-5],
+    axis:true, 
+    showNavigation:true, 
+    showCopyright:false,
+    defaultAxes: {
+        x : {
+            name: 'X',
+            withLabel: true,
+            label: {
+                position: 'rt',
+                offset: [-10, -15]
+            }
+        },
+        y : {
+            withLabel:true,
+            name: 'Y',
+            label: {
+                position: 'rt',
+                offset: [-20, -10]
+            }
+        }
+}});
 
-const viewport = {
-    width: 500,
-    height: 300
-}
+let a = board.create('slider',
+    [[-4,-2],[4,-2],[-4,1.5,4]],
+    {name:'a'}
+);
 
-const canvas = document.getElementById('scalar-mult');
+ // Create a button element at position [1,4].
+let btnHide = board.create('button', [-4, -3, 'Hide vector', function() {
+    let txt;
+    btnHide.value = !btnHide.value;
+    if (btnHide.value) {
+  	    txt = 'Show vector';
+        l1.setAttribute({visible:false});
+    } else {
+  	    txt = 'Hide vector';
+        l1.setAttribute({visible:true});
+    }
+	btnHide.rendNodeButton.
+        innerHTML = txt;
+ }]);
 
-const scene = new THREE.Scene();
 
-const camera = new THREE.PerspectiveCamera(75, viewport.width/viewport.height);
-
-const renderer = new THREE.WebGLRenderer({
-    canvas: canvas,
-    alpha: true,
+let p1 = board.create('point',
+    [2,5]
+);
+let l1 = board.create('line',
+    [[0,0],p1], {
+    straightFirst:false,
+    straightLast:false, 
+    lastArrow:true,
 });
-renderer.setSize(viewport.width, viewport.height);
-renderer.setAnimationLoop(animate);
 
-const dir = new THREE.Vector3( 1, 2, 0 );
+l1.setAttribute({fixed:true});
 
-//normalize the direction vector (convert to vector of length 1)
-dir.normalize();
+let p2 = board.create('point',
+    [
+        function() {return a.Value()*p1.X();},
+        function() {return a.Value()*p1.Y();}
+    ]
+);
 
-const origin = new THREE.Vector3( 0, 0, 0 );
-const length = 1;
-const hex = 0xffff00;
+let l2 = board.create('line',
+    [[0,0],p2],
+    {
+        straightFirst:false,
+        straightLast:false,
+        lastArrow:true,
+        strokeColor: "orange",
+        strokeOpacity: 0.6
+    }
+);
 
-const arrowHelper = new THREE.ArrowHelper( dir, origin, length, hex );
-scene.add( arrowHelper );
+let text = board.create('text',
+    [-4,6,
+  function() { 
+
+    return `\\vv = ${a.Value().toFixed(2)} \\begin{bmatrix} ${p1.X().toFixed(2)} \\newline ${p1.Y().toFixed(2)} \\end{bmatrix} = 
+    \\begin{bmatrix} ${(a.Value()*p1.X()).toFixed(2)} \\newline ${(a.Value()*p1.Y()).toFixed(2)} \\end{bmatrix}`;
+  }],{
+        parse: true
+    }
+);
+
+let segmentX = board.create(
+    'line',
+    [[0, function(){return p1.Y()}], p1],
+    {
+        straightFirst:false,
+        straightLast:false,
+        dash:2,
+        fixed: true,
+        strokeColor: "red"
+    }
+);
+let segmentY = board.create(
+    'line',
+    [[function(){return p1.X()},0],p1],
+    {
+        straightFirst:false,
+        straightLast:false,
+        dash:2,
+        fixed: true,
+        strokeColor: "green"
+    }
+);
 
 
-camera.position.z = 3;
+// katex.render(text.htmlStr, text.rendNode, {globalGroup: true, macros: NOTATION})
 
-function animate(){
-    renderer.render(scene, camera);
-}
+
 </script>
