--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -1,6 +1,7 @@
 ---
 import fs from 'node:fs/promises';
 import { XMLParser } from 'fast-xml-parser';
+import { markToHtml } from '../../tools/helper.parser';
 
 /* 
 Just for documentation
@@ -10,7 +11,7 @@ drawio diagram viewer: https://github.com/jgraph/drawio-tools/blob/master/tools/
 const {
     file,
     page="1",
-    description="Please insert the description of this diagram"
+    description="Please **insert** the description of this diagram"
 } = Astro.props;
 
 const url = new URL(`../../resources/${file}`, import.meta.url);
@@ -23,5 +24,5 @@ const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_bla
 ---
 <div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4 w-full">
     <iframe style="width:100%;height:380px;" src={src}></iframe>
-    <em class="py-4">Figure X.X: {description}</em>
+    <em set:html={markToHtml(description)} class="py-4"></em>
 </div>
