--- a/src/components/Globals/Image.astro
+++ b/src/components/Globals/Image.astro
@@ -1,11 +1,12 @@
 ---
+import { markToHtml } from "../../tools/helper.parser";
 const {
     src, 
-    description="Please insert the description of this image"
+    description="Please **insert** the description of this image"
 } = Astro.props;
 ---
 
 <div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
     <img src={src} alt={description}>
-    <em class="py-4">Figure X.X: {description}</em>
+    <em set:html={markToHtml(description)} class="py-4"></em>
 </div>
