--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -24,5 +24,5 @@ const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_bla
 ---
 <div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4 w-full">
     <iframe style="width:100%;height:380px;" src={src}></iframe>
-    <em set:html={markToHtml(description)} class="py-4"></em>
+    <em set:html={markToHtml(description)} class="py-4 px-4"></em>
 </div>
