--- a/src/components/Globals/A.astro
+++ b/src/components/Globals/A.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<a {...props} class="bg-blue-800 border-b-white">
+<a {...props} class="border-b border-white hover:border-b-2">
   <slot/>
 </a>
