better code blocks

--- a/src/components/Globals/Pre.astro
+++ b/src/components/Globals/Pre.astro
@@ -2,4 +2,6 @@
 const props = Astro.props;
 ---
 
-<pre {...props} class="bg-dark-100"><slot/></pre>
+<pre class="bg-dark-50 p-4 border-[0.3px] border-dark-100">
+<slot/>
+</pre>
