--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -27,3 +27,8 @@ const { title, headings, description, githubEditUrl } = Astro.props;
 	<nav class="block sm:hidden">
 	</nav>
 </article>
+
+<script>
+const figures = document.querySelectorAll('#figure');
+console.log(figures);
+</script>
