--- a/src/components/Figures/Canvas.astro
+++ b/src/components/Figures/Canvas.astro
@@ -3,7 +3,7 @@
 import { markToHtml } from "../../tools/helper.parser";
 const {description="Please insert the description of this figure"} = Astro.props;
 ---
-<div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
+<div id="figure" class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
     <slot/>
     <p set:html={markToHtml(description)} class="py-4"></p>
 </div>
