--- a/src/components/Figures/JSXGraph.astro
+++ b/src/components/Figures/JSXGraph.astro
@@ -4,7 +4,7 @@ import { markToHtml } from "../../tools/helper.parser";
 const {description="Description"} = Astro.props;
 ---
 
-<div class="flex flex-col items-center border-[0.3px] border-dark-100 w-full h-96">
+<div id="figure" class="flex flex-col items-center border-[0.3px] border-dark-100 w-full h-96">
     <slot/>
     <p set:html={markToHtml(description)} class="py-4"></p>
 </div>
