--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -22,7 +22,7 @@ const diagram = parser.parse(xmlFile).mxfile.diagram[parseInt(page)-1];
 const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test.drawio#R${encodeURIComponent(diagram)}`
 
 ---
-<div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4 w-full">
+<div id="figure" class="flex flex-col items-center border-[0.3px] border-dark-100 my-4 w-full">
     <iframe style="width:100%;height:380px;" src={src}></iframe>
     <em set:html={markToHtml(description)} class="py-4 px-4"></em>
 </div>
