--- a/src/components/Globals/Image.astro
+++ b/src/components/Globals/Image.astro
@@ -6,7 +6,7 @@ const {
 } = Astro.props;
 ---
 
-<div class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
+<div id="figure" class="flex flex-col items-center border-[0.3px] border-dark-100 my-4">
     <img src={src} alt={description}>
     <em set:html={markToHtml(description)} class="py-4"></em>
 </div>
