--- a/src/components/LinearAlgebra/AddVector.astro
+++ b/src/components/LinearAlgebra/AddVector.astro
@@ -4,8 +4,6 @@ import JSXGraph from "../Figures/JSXGraph.astro";
 
 const {description="Please insert the description of this figure"} = Astro.props;
 ---
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css" integrity="sha384-vKruj+a13U8yHIkAyGgK1J3ArTLzrFGBbBc0tDp4ad/EyewESeXE/Iv67Aj8gKZ0" crossorigin="anonymous">
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.js" integrity="sha384-PwRUT/YqbnEjkZO0zZxNqcxACrXe+j766U2amXcgMg5457rve2Y7I6ZJSm2A0mS4" crossorigin="anonymous"></script>
 
 <JSXGraph description={description}>
     <div id="vector-mult" class="jsxbox" style="width: 100%; height: 480px;">
@@ -122,6 +120,8 @@ let btnHide = board.create('button', [-4, -3, 'Show reference vector', function(
     }
 	btnHide.rendNodeButton.
         innerHTML = txt;
- }]);
+ }],{
+        useKatex: false
+});
 
 </script>
