--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -35,6 +35,7 @@ const githubEditUrl = `${GITHUB_EDIT_URL}/${currentFile}`;
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.4/katex.min.css"
         />
+        <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.js" integrity="sha384-tsPOhveNsi36uhglzMBNOAA2xd7LlEqQuQHFKi4DwP+6UKrrLGub1MD77Zx18F8e" crossorigin="anonymous"></script>
 	</head>
 
 	<body class="bg-primary-dark font-roboto text-base text-white leading-relaxed">
