--- a/src/components/Globals/H3.astro
+++ b/src/components/Globals/H3.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<h3 {...props} class="text-2xl font-bold py-4"><slot/></h3>
+<h3 {...props} class="text-2xl font-bold pt-4"><slot/></h3>
