change to margin instead od padding

--- a/src/components/Globals/Definition.astro
+++ b/src/components/Globals/Definition.astro
@@ -2,7 +2,7 @@
 const {definition, source, link} = Astro.props;
 ---
 
-<div class="p-4">
+<div class="mt-6">
     <p><em>"{definition}"</em></p>
     <a href={link} class="ml-4 border-b hover:border-b-2">{source}</a>
 </div>
