--- a/src/components/Globals/H1.astro
+++ b/src/components/Globals/H1.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<h1 class="text-5xl font-bold pt-4"><slot/></h1>
+<h1 class="text-5xl font-bold mt-4"><slot/></h1>
