--- a/src/components/Globals/H2.astro
+++ b/src/components/Globals/H2.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<h2 {...props} class="text-3xl font-bold pt-4"><slot/></h2>
+<h2 {...props} class="text-3xl font-bold mt-4"><slot/></h2>
