improve footer spacing and separation

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -1,6 +1,7 @@
 ---
+
 ---
 
-<footer class="flex justify-center py-6">
+<footer class="flex justify-center py-6 border-t border-dark-50 text-dark-200 mt-6">
     <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>
 </footer>
