make text consistent with the rest of the site

--- a/src/components/Globals/Important.astro
+++ b/src/components/Globals/Important.astro
@@ -12,6 +12,6 @@ const {
 
 ---
 
-<div class="bg-dark-50 text-xl italic text-gray-900 dark:text-white p-4 border-l-8 border-l-red-900 mt-6">
+<div class="bg-dark-50 italic text-gray-900 dark:text-white p-4 border-l-8 border-l-red-900 mt-6">
     <p set:html={markToHtml(note)}></p>
 </div>
