margin in title

--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -15,7 +15,7 @@ const { title, headings, description, githubEditUrl } = Astro.props;
 <article id="article" class="content">
 	<section class="main-section">
         <div class="">
-            <h1 class="text-5xl font-bold" id="overview">{title}</h1>
+            <h1 class="text-5xl font-bold mt-6" id="overview">{title}</h1>
             <p class="text-xl font-thin py-4">{description}</p>
             <hr/>
         </div>
