--- a/src/components/Globals/Ol.astro
+++ b/src/components/Globals/Ol.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<ol {...props} class="list-decimal list-inside pt-4 text-gray-300">
+<ol {...props} class="list-decimal list-inside mt-4 text-gray-300 ml-4">
     <slot/>
 </ol>
