--- a/src/components/Globals/Ul.astro
+++ b/src/components/Globals/Ul.astro
@@ -2,6 +2,6 @@
 const props = Astro.props;
 ---
 
-<ul {...props} class="list-disc list-inside text-gray-300">
+<ul {...props} class="list-disc list-inside mt-4 text-gray-300 ml-4">
     <slot/>
 </ul>
