change to BaseContainer

--- a/src/components/Globals/Equation.astro
+++ b/src/components/Globals/Equation.astro
@@ -2,6 +2,7 @@
 import katex from 'katex';
 import {NOTATION} from '../../consts';
 import { markToHtml, latexToHtml } from '../../tools/helper.parser.js'
+import BaseContainer from "./BaseContainer.astro";
 
 export interface Props {
     formula: string, // EXPECT ONLY LaTeX
@@ -17,12 +18,14 @@ const html = latexToHtml(formula);
 const caption = markToHtml(description);
 ---
 
-<div data-latex={formula} id="math" class="math relative flex flex-col items-center border-[0.3px] border-dark-100 my-4">
-    <p set:html={html} class="pt-4"></p>
-    <div set:html={caption} class="py-4 px-4"></div>
-    <!-- The button is disable because most of the latex are custom commands -->
-    <button id="test-latex" class="hidden absolute top-2 right-2">Copy LaTeX</button>
-</div>
+<BaseContainer>
+    <div data-latex={formula} id="math" class="math relative flex flex-col items-center">
+        <p set:html={html} class="pt-4"></p>
+        <div set:html={caption} class="py-4 px-4"></div>
+        <!-- The button is disable because most of the latex are custom commands -->
+        <button id="test-latex" class="hidden absolute top-2 right-2">Copy LaTeX</button>
+    </div>
+</BaseContainer>
 
 <script>
 const btn = document.querySelector("#test-latex");
