--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -2,6 +2,7 @@
 import fs from 'node:fs/promises';
 import { XMLParser } from 'fast-xml-parser';
 import { markToHtml } from '../../tools/helper.parser';
+import BaseContainer from './BaseContainer.astro';
 
 /* 
 Just for documentation
@@ -36,7 +37,11 @@ if (typeof(project.mxfile.diagram) === "string"){
 const src = `https://viewer.diagrams.net/?tags=%7B%7D&highlight=0000ff&edit=_blank&layers=1&nav=1&title=test.drawio#R${encodeURIComponent(diagram)}`
 
 ---
-<div id="figure" class="flex flex-col items-center border-[0.3px] border-dark-100 my-4 w-full">
-    <iframe style="width:100%;height:380px;" src={src}></iframe>
-    <em set:html={markToHtml(description)} class="py-4 px-4"></em>
-</div>
+
+<BaseContainer>
+    <div id="figure" class="flex flex-col items-center w-full">
+        <iframe style="width:100%;height:380px;" src={src}></iframe>
+        <em set:html={markToHtml(description)} class="py-4 px-4"></em>
+    </div>
+</BaseContainer>
+
