--- a/src/components/Globals/Terminal.astro
+++ b/src/components/Globals/Terminal.astro
@@ -1,5 +1,5 @@
 ---
-import { markToHtml } from '../../tools/helper.parser.js'
+import BaseContainer from './BaseContainer.astro';
 
 export interface Props {
     content: string,
@@ -13,11 +13,10 @@ for (const elem of content.split("\\")) {
     lines.push(elem.replace("\\n","").trim());
 }
 
-// const html = markToHtml(lines);
 ---
 
-<div class="p-px bg-gradient-to-br from-dark-100 via-transparent to-dark-100 mt-6">
-    <div class="px-6 bg-primary-dark">
+<BaseContainer>
+    <div class="px-6">
         <div class="top py-4 flex border-dark-50 border-b">
             <div class="h-3 w-3 bg-dark-100 rounded-full"></div>
             <div class="ml-2 h-3 w-3 bg-dark-100 rounded-full"></div>
@@ -27,9 +26,9 @@ for (const elem of content.split("\\")) {
             {lines.map((line) => (
                 <div class="flex items-center">
                     <span class="before:content-['$'] mr-2 text-dark-100"></span>
-                    <p>{line}</p>
+                    <p class="font-mono">{line}</p>
                 </div>
             ))}
         </div>
     </div>
-</div>
+</BaseContainer>
