--- a/src/components/LinearAlgebra/VectorSpace2D.astro
+++ b/src/components/LinearAlgebra/VectorSpace2D.astro
@@ -47,7 +47,9 @@ board.create("arrow", [[0,0], vector2], {fixed:true});
 board.create("arrow", [[0,0], vector3], {fixed:true});
 board.create("arrow", [[0,0], vector4], {fixed:true});
 
-board.create("regularpolygon", [[100, 100], [-100, 100], 4], {
+const limit = 1000000;
+
+board.create("regularpolygon", [[limit, limit], [-limit, limit], 4], {
     color: "blue",
     fixed: true
 });
