--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -3,32 +3,26 @@ import type { MarkdownHeading } from 'astro';
 import TableOfContents from '../RightSidebar/TableOfContents';
 
 type Props = {
-	title: string;
-	headings: MarkdownHeading[];
+    title: string;
+    headings: MarkdownHeading[];
     description: string,
-	githubEditUrl: string;
+    githubEditUrl: string;
 };
 
 const { title, headings, description, githubEditUrl } = Astro.props;
 ---
 
-<article id="article" class="content">
-	<section class="main-section">
-        <div class="">
-            <h1 class="text-5xl font-bold mt-6" id="overview">{title}</h1>
-            <p class="text-xl font-thin py-4">{description}</p>
-            <hr/>
+<article id="article" class="content w-[700px] mx-4">
+    <section class="main-section">
+        <div class="mb-4">
+            <h1 class="text-5xl font-bold mt-6">{title}</h1>
+            <p class="text-xl font-thin mt-4">{description}</p>
         </div>
-		<nav class="block sm:hidden">
-			<TableOfContents client:media="(max-width: 50em)" headings={headings} />
-		</nav>
-		<slot />
-	</section>
-	<nav class="block sm:hidden">
-	</nav>
+        <nav class="block sm:hidden">
+            <TableOfContents client:media="(max-width: 50em)" headings={headings} />
+        </nav>
+    <slot />
+    </section>
+    <nav class="block sm:hidden">
+    </nav>
 </article>
-
-<script>
-const figures = document.querySelectorAll('#figure');
-console.log(figures);
-</script>
