--- a/src/components/Globals/CodeBlock.astro
+++ b/src/components/Globals/CodeBlock.astro
@@ -2,4 +2,4 @@
 const props = Astro.props;
 ---
 
-<code {...props} class="bg-dark-100 h-min px-1"><slot /></code>
+<code {...props} class="border border-dark-100 h-min px-1 rounded"><slot /></code>
