--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -12,14 +12,14 @@ type Props = {
 const { title, headings, description, githubEditUrl } = Astro.props;
 ---
 
-<article id="article" class="content w-[700px] mx-4">
+<article id="article" class="content mx-4 w-[700px]">
     <section class="main-section">
         <div class="mb-4">
             <h1 class="text-5xl font-bold mt-6">{title}</h1>
             <p class="text-xl font-thin mt-4">{description}</p>
         </div>
-        <nav class="block sm:hidden">
-            <TableOfContents client:media="(max-width: 50em)" headings={headings} />
+        <nav class="block">
+            <TableOfContents client:media="(max-width: 70em)" headings={headings} />
         </nav>
     <slot />
     </section>
