--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -1,20 +1,22 @@
 ---
-import { CollectionEntry, getCollection } from 'astro:content';
 import MainLayout from '../layouts/MainLayout.astro';
 
-export async function getStaticPaths() {
-	const docs = await getCollection('docs');
-	return docs.map((entry) => ({
-		params: {
-			slug: entry.slug,
-		},
-		props: entry,
-	}));
-}
-type Props = CollectionEntry<'docs'>;
+import { getEntry } from "astro:content";
+// 1. Get the slug from the incoming server request
+const { slug } = Astro.params;
 
+if (slug === undefined) {
+  throw new Error("Slug is required");
+}
+// 2. Query for the entry directly using the request slug
+const entry = await getEntry("docs", slug);
+// 3. Redirect if the entry does not exist
+if (entry === undefined) {
+  return Astro.redirect("/404");
+}
 const post = Astro.props;
-const { Content, headings } = await post.render();
+// 4. (Optional) Render the entry to HTML in the template
+const { Content, headings } = await entry.render();
 ---
 
 <MainLayout headings={headings} {...post.data}>
