--- a/src/components/Globals/Drawio.astro
+++ b/src/components/Globals/Drawio.astro
@@ -15,8 +15,10 @@ const {
     description="Please **insert** the description of this diagram"
 } = Astro.props;
 
-const url = new URL(`../../resources/${file}`, import.meta.url);
-const xmlFile = await fs.readFile(url, 'utf-8');
+// const url = new URL(`../../resources/${file}`, import.meta.url);
+// const xmlFile = await fs.readFile(url, 'utf-8');
+const response = await fetch(`https://raw.githubusercontent.com/harleylara/robotics/master/src/resources/${file}`)
+const xmlFile = await response.text();
 
 const parser = new XMLParser();
 const project = parser.parse(xmlFile);
