fix overflow in terminal component

--- a/src/components/Globals/Terminal.astro
+++ b/src/components/Globals/Terminal.astro
@@ -21,7 +21,7 @@ for (const elem of content.split("\\")) {
 ---
 
 <BaseContainer>
-    <div class="px-6 w-full">
+    <div class="px-6">
         <div class="top py-2 relative flex items-center justify-center border-dark-50 border-b">
             <div class="absolute left-0">
                 <div class="flex">
