update 404 to link to home

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,8 +6,9 @@ const seo = {
 ---
 
 <div class="bg-primary-dark text-white">
-    <div class="flex items-center justify-center h-screen w-screen">
-        <div id="item" title="404" class="font-bold text-9xl">404</div>
+    <div class="flex flex-col items-center justify-center h-screen w-screen">
+        <div id="item" title="404" class="font-bold text-9xl m-4">404</div>
+        <a href="/">Take me back home</a>
     </div>
     <!-- what are you doing here? ... are you trying to scape from something of someone? -->
 </div>
